--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,61 +20,14 @@
                  android:label="@string/app_name"
                  android:icon="@mipmap/ic_launcher"
                  android:theme="@style/AppTheme">
-        <activity android:name=".ScriptPicker">
+        <activity android:name=".ScriptPicker"
+                  android:launchMode="singleTask"
+                  tools:ignore="UnusedAttribute">
             <intent-filter>
 
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-
-            </intent-filter>
-
-            <intent-filter>
-
-                <action android:name="android.intent.action.VIEW"/>
-
-                <!-- all content:// and file:// links with look-alike extensions -->
-                <data android:pathPattern=".*\.groovy"/>
-                <data android:pathPattern=".*\.groovy" android:mimeType="*/*"/>
-
-                <!-- all well-typed content:// and file:// links -->
-                <data android:mimeType="text/groovy"/>
-                <data android:mimeType="script/groovy"/>
-                <data android:mimeType="application/groovy"/>
-                <data android:mimeType="application/x-groovy"/>
-
-                <category android:name="android.intent.category.DEFAULT" />
-
-            </intent-filter>
-
-            <!--
-            <intent-filter>
-
-                <data android:scheme="http" android:pathPattern=".*\.groovy"/>
-                <data android:scheme="http" android:pathPattern=".*\.groovy" android:mimeType="*/*"/>
-                <data android:scheme="https" android:pathPattern=".*\.groovy"/>
-                <data android:scheme="https" android:pathPattern=".*\.groovy" android:mimeType="*/*"/>
-
-                <data android:scheme="http" android:mimeType="text/groovy"/>
-                <data android:scheme="http" android:mimeType="script/groovy"/>
-                <data android:scheme="http" android:mimeType="application/groovy"/>
-                <data android:scheme="http" android:mimeType="application/x-groovy"/>
-                <data android:scheme="https" android:mimeType="text/groovy"/>
-                <data android:scheme="https" android:mimeType="script/groovy"/>
-                <data android:scheme="https" android:mimeType="application/groovy"/>
-                <data android:scheme="https" android:mimeType="application/x-groovy"/>
-
-                <category android:name="android.intent.category.BROWSABLE"/>
-
-            </intent-filter>
-            -->
-
-            <!-- special filter for content providers, unable to correctly identify exact type -->
-            <intent-filter>
-
-                <action android:name="android.intent.action.SEND"/>
-
-                <data android:scheme="content" android:mimeType="text/*"/>
 
             </intent-filter>
         </activity>
