--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':app', ':goro', ':db'
+include ':app', ':goro', ':db', ':dispatcher'
 
 project(':goro').projectDir = "$rootDir/goro/goro" as File
