--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
     <application android:allowBackup="true"
                  android:label="@string/app_name"
                  android:icon="@mipmap/ic_launcher"
-                 android:theme="@style/AppTheme">
+                 android:theme="@style/AppTheme"
+                 android:largeHeap="true">
         <activity android:name=".ScriptPicker"
                   android:launchMode="singleTask"
                   tools:ignore="UnusedAttribute">
