--- a/build.gradle
+++ b/build.gradle
@@ -20,3 +20,27 @@ allprojects {
         jcenter()
     }
 }
+
+project(':dx') {
+    apply plugin: 'java'
+
+    sourceSets {
+        main {
+            java.srcDirs = ['src/']
+        }
+    }
+
+    sourceCompatibility = '1.6'
+    targetCompatibility = '1.6'
+
+    dependencies {
+        compile project(':dex')
+    }
+}
+
+project(':dex') {
+    apply plugin: 'java'
+
+    sourceCompatibility = '1.6'
+    targetCompatibility = '1.6'
+}
